File size fix
